# rust_server_cyb3ria_xyz

./: .env  Cargo.toml  database_schema.txt  database_schema_1.txt  project_contents.txt  script_db_info  script_for_copy
src/: db.rs  main.rs  models.rs  utils.rs
src/db/: devices.rs  files.rs  messages.rs  mod.rs  profiles.rs  sessions.rs  users.rs
src/handlers/: auth.rs  chat.rs  files.rs  mod.rs  profile.rs  upload.rs
src/handlers/auth/: login.rs  logout.rs  mod.rs  register.rs
src/middleware/: auth.rs
static/: 404.html  chat.html  choice.html  dashboard.html  login.html  menu.html  profile.html  register.html  upload.html
static/css/: chat.css  dashboard.css  forms.css  menu.css  profile.css  styles.css  upload.css
static/js/: menu.js  scripts.js
uploaded/: code(1).txt  register.html
